--- a/.github/workflows/gradleBuild.yaml
+++ b/.github/workflows/gradleBuild.yaml
@@ -21,6 +21,7 @@ jobs:
 
     #Use JDK 11
     -name: Setup JDK 11
+     uses: actions/setup-java@v2
      with:
       java-version: '11'
       distribution: 'adopt'
